# aphreco-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: ex1.rs  opt.rs  sim.rs  simulate.rs
src/: beat.rs  data.rs  lib.rs  model.rs  objective.rs  optimizer.rs  simulate.rs  simulator.rs  step.rs  stepper.rs  utils.rs
src/model/: fix.rs  flex.rs  ode.rs  rec.rs
src/objective/: base.rs
src/optimize/: base.rs  genetic_algorithm.rs  model.rs  neldermead.rs  result.rs
src/optimizer/: base.rs  genetic_algorithm.rs  neldermead.rs  result.rs
src/simulate/: fix.rs  model.rs  options.rs  result.rs
src/simulator/: fixed.rs  result.rs
src/step/: base.rs  dopri45.rs  rk4.rs
src/stepper/: base.rs  dopri45.rs  rk4.rs
