[package]
name = "aphrecors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.14.0"
rust_decimal = "1.19.0"
num-traits = { default-features = false, features = ["i128"], version = "0.2" }
chrono = "0.4.19"
rand = "0.8.4"
