[package]
name = "aphreco"
version = "0.1.1"
edition = "2021"
authors = ["Satoshi Koyama"]
repository = "https://github.com/aphreco-lab/aphreco-rust"
keywords = ["simulation", "optimization"]
license-file = "LICENSE"
readme = "README.md"
description = "A small-scale physiological modeling library"

[dependencies]
ndarray = "0.14.0"
rust_decimal = "1.19.0"
num-traits = { default-features = false, features = ["i128"], version = "0.2" }
chrono = "0.4.19"
rand = "0.8.4"
